[gd_scene load_steps=11 format=2]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://game/level_holder.gd" type="Script" id=2]
[ext_resource path="res://gui_theme.tres" type="Theme" id=3]
[ext_resource path="res://game/message.gd" type="Script" id=4]
[ext_resource path="res://game/message_next_arrow.png" type="Texture" id=5]
[ext_resource path="res://game/level/farm/farm.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/level/house/house.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/level/town/town.tscn" type="PackedScene" id=8]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0.15, 0.25, 0.35, 0.65, 0.75, 0.85 )
colors = PoolColorArray( 0.341176, 0.329412, 0.435294, 1, 0.839216, 0.603922, 0.305882, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.839216, 0.603922, 0.305882, 1, 0.341176, 0.329412, 0.435294, 1 )
_sections_unfolded = [ "colors", "offsets" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.137255, 0.129412, 0.239216, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="LevelHolder" type="Node2D" parent="."]
script = ExtResource( 2 )
_sections_unfolded = [ "Material", "Visibility", "color_cylce", "material" ]
color_cylce = SubResource( 1 )

[node name="DayModulate" type="CanvasModulate" parent="LevelHolder"]
color = Color( 1, 1, 1, 1 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Base" type="Control" parent="UI"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Message" type="PopupPanel" parent="UI/Base"]
pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 2 )
popup_exclusive = true
script = ExtResource( 4 )
_sections_unfolded = [ "Popup" ]

[node name="Label" type="Label" parent="UI/Base/Message"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="NextIcon" type="TextureRect" parent="UI/Base/Message"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Blink" type="Timer" parent="UI/Base/Message"]
process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="LevelPreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "farm", "house", "town" ), [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ] ]

[node name="ClockTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.25
one_shot = false
autostart = true

[connection signal="about_to_show" from="UI/Base/Message" to="UI/Base/Message" method="_on_about_to_show"]
[connection signal="popup_hide" from="UI/Base/Message" to="UI/Base/Message" method="_on_popup_hide"]
[connection signal="timeout" from="UI/Base/Message/Blink" to="UI/Base/Message" method="_on_Blink_timeout"]
